feat: Implement light theme and refine color palette across all pages

--- a/ai-insights.html
+++ b/ai-insights.html
@@ -16,8 +16,8 @@
 
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #0F172A;
-      color: white;
+      background: #F8F9FC;
+      color: #1E293B;
     }
 
     .sidebar {
@@ -26,8 +26,8 @@
       top: 0;
       bottom: 0;
       width: 260px;
-      background: #1E293B;
-      border-right: 1px solid rgba(255, 255, 255, 0.1);
+      background: #FFFFFF;
+      border-right: 1px solid rgba(0, 0, 0, 0.08);
       padding: 1.5rem;
       z-index: 100;
     }
@@ -38,7 +38,7 @@
       gap: 0.75rem;
       margin-bottom: 2rem;
       padding-bottom: 1.5rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     }
 
     .logo-section img {
@@ -50,7 +50,7 @@
     .logo-text {
       font-size: 1.25rem;
       font-weight: 700;
-      background: linear-gradient(135deg, #60A5FA, #A78BFA);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -77,18 +77,18 @@
       display: flex;
       align-items: center;
       gap: 0.75rem;
-      color: #CBD5E1;
+      color: #64748B;
       text-decoration: none;
     }
 
     .nav-item:hover {
       background: rgba(79, 70, 229, 0.2);
-      color: white;
+      color: #1E293B;
     }
 
     .nav-item.active {
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
-      color: white;
+      color: #1E293B;
     }
 
     .main-content {
@@ -108,11 +108,11 @@
     }
 
     .header p {
-      color: #94A3B8;
+      color: #64748B;
     }
 
     .query-box {
-      background: #1E293B;
+      background: #FFFFFF;
       border: 2px solid rgba(79, 70, 229, 0.3);
       border-radius: 16px;
       padding: 1.5rem;
@@ -123,7 +123,7 @@
       width: 100%;
       background: transparent;
       border: none;
-      color: white;
+      color: #1E293B;
       font-size: 1.1rem;
       outline: none;
       margin-bottom: 1rem;
@@ -138,7 +138,7 @@
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
       border: none;
       border-radius: 8px;
-      color: white;
+      color: #1E293B;
       font-weight: 600;
       cursor: pointer;
       transition: transform 0.3s;
@@ -154,15 +154,15 @@
     }
 
     .insight-card {
-      background: #1E293B;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: #FFFFFF;
+      border: 1px solid rgba(0, 0, 0, 0.08);
       border-radius: 16px;
       padding: 2rem;
       border-left: 4px solid;
     }
 
     .insight-card.positive {
-      border-left-color: #10B981;
+      border-left-color: #4F46E5;
     }
 
     .insight-card.warning {
@@ -201,7 +201,7 @@
     }
 
     .insight-description {
-      color: #CBD5E1;
+      color: #64748B;
       line-height: 1.6;
       margin-bottom: 1rem;
     }
