--- a/pulse-analytics-landing.html
+++ b/pulse-analytics-landing.html
@@ -19,7 +19,7 @@
       --primary-dark: #4338CA;
       --secondary: #7C3AED;
       --accent: #06B6D4;
-      --dark: #0F172A;
+      --dark: #F8F9FC;
       --gray: #64748B;
       --light-gray: #F1F5F9;
       --white: #FFFFFF;
@@ -73,7 +73,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      color: white;
+      color: #1E293B;
       font-weight: 700;
     }
 
@@ -96,7 +96,7 @@
 
     .cta-button {
       background: linear-gradient(135deg, var(--primary), var(--secondary));
-      color: white;
+      color: #1E293B;
       padding: 0.75rem 1.5rem;
       border-radius: 8px;
       text-decoration: none;
@@ -114,8 +114,8 @@
     .hero {
       margin-top: 80px;
       padding: 6rem 2rem;
-      background: linear-gradient(135deg, #0F172A 0%, #1E293B 100%);
-      color: white;
+      background: linear-gradient(135deg, #F8F9FC 0%, #1E293B 100%);
+      color: #1E293B;
       position: relative;
       overflow: hidden;
     }
@@ -152,7 +152,7 @@
     }
 
     .gradient-text {
-      background: linear-gradient(135deg, #60A5FA, #A78BFA);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -160,7 +160,7 @@
 
     .hero-content p {
       font-size: 1.25rem;
-      color: #CBD5E1;
+      color: #64748B;
       margin-bottom: 2rem;
       line-height: 1.8;
     }
@@ -173,7 +173,7 @@
 
     .primary-btn {
       background: linear-gradient(135deg, var(--primary), var(--secondary));
-      color: white;
+      color: #1E293B;
       padding: 1rem 2rem;
       border-radius: 12px;
       text-decoration: none;
@@ -190,9 +190,9 @@
     }
 
     .secondary-btn {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(0, 0, 0, 0.08);
       backdrop-filter: blur(10px);
-      color: white;
+      color: #1E293B;
       padding: 1rem 2rem;
       border-radius: 12px;
       text-decoration: none;
@@ -212,9 +212,9 @@
     }
 
     .dashboard-preview {
-      background: rgba(255, 255, 255, 0.05);
+      background: rgba(0, 0, 0, 0.05);
       backdrop-filter: blur(20px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(0, 0, 0, 0.08);
       border-radius: 16px;
       padding: 2rem;
       box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
@@ -234,14 +234,14 @@
     .stat-value {
       font-size: 2.5rem;
       font-weight: 800;
-      background: linear-gradient(135deg, #60A5FA, #A78BFA);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
     }
 
     .stat-label {
-      color: #94A3B8;
+      color: #64748B;
       font-size: 0.9rem;
       margin-top: 0.5rem;
     }
@@ -336,7 +336,7 @@
 
     .pricing-card.featured {
       background: linear-gradient(135deg, var(--primary), var(--secondary));
-      color: white;
+      color: #1E293B;
       transform: scale(1.05);
       border: none;
     }
@@ -390,7 +390,7 @@
 
     .pricing-card:not(.featured) .pricing-btn {
       background: var(--primary);
-      color: white;
+      color: #1E293B;
     }
 
     .pricing-card.featured .pricing-btn {
@@ -406,7 +406,7 @@
     .cta-section {
       padding: 6rem 2rem;
       background: linear-gradient(135deg, var(--primary), var(--secondary));
-      color: white;
+      color: #1E293B;
       text-align: center;
     }
 
@@ -425,7 +425,7 @@
     /* Footer */
     footer {
       background: var(--dark);
-      color: white;
+      color: #1E293B;
       padding: 3rem 2rem;
     }
 
@@ -444,21 +444,21 @@
 
     .footer-section a {
       display: block;
-      color: #94A3B8;
+      color: #64748B;
       text-decoration: none;
       margin-bottom: 0.5rem;
       transition: color 0.3s;
     }
 
     .footer-section a:hover {
-      color: white;
+      color: #1E293B;
     }
 
     .footer-bottom {
       text-align: center;
       margin-top: 3rem;
       padding-top: 2rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      border-top: 1px solid rgba(0, 0, 0, 0.08);
       color: #64748B;
     }
 
