--- a/reports.html
+++ b/reports.html
@@ -16,8 +16,8 @@
 
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #0F172A;
-      color: white;
+      background: #F8F9FC;
+      color: #1E293B;
     }
 
     .sidebar {
@@ -26,8 +26,8 @@
       top: 0;
       bottom: 0;
       width: 260px;
-      background: #1E293B;
-      border-right: 1px solid rgba(255, 255, 255, 0.1);
+      background: #FFFFFF;
+      border-right: 1px solid rgba(0, 0, 0, 0.08);
       padding: 1.5rem;
       z-index: 100;
     }
@@ -38,7 +38,7 @@
       gap: 0.75rem;
       margin-bottom: 2rem;
       padding-bottom: 1.5rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     }
 
     .logo-section img {
@@ -50,7 +50,7 @@
     .logo-text {
       font-size: 1.25rem;
       font-weight: 700;
-      background: linear-gradient(135deg, #60A5FA, #A78BFA);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -77,18 +77,18 @@
       display: flex;
       align-items: center;
       gap: 0.75rem;
-      color: #CBD5E1;
+      color: #64748B;
       text-decoration: none;
     }
 
     .nav-item:hover {
       background: rgba(79, 70, 229, 0.2);
-      color: white;
+      color: #1E293B;
     }
 
     .nav-item.active {
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
-      color: white;
+      color: #1E293B;
     }
 
     .main-content {
@@ -102,7 +102,7 @@
       align-items: center;
       margin-bottom: 2rem;
       padding-bottom: 1.5rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     }
 
     .header h1 {
@@ -112,7 +112,7 @@
     }
 
     .header p {
-      color: #94A3B8;
+      color: #64748B;
     }
 
     .create-btn {
@@ -120,7 +120,7 @@
       background: linear-gradient(135deg, #4F46E5, #7C3AED);
       border: none;
       border-radius: 8px;
-      color: white;
+      color: #1E293B;
       font-weight: 600;
       cursor: pointer;
       transition: transform 0.3s;
@@ -137,8 +137,8 @@
     }
 
     .report-card {
-      background: #1E293B;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: #FFFFFF;
+      border: 1px solid rgba(0, 0, 0, 0.08);
       border-radius: 16px;
       padding: 1.5rem;
       transition: transform 0.3s, box-shadow 0.3s;
@@ -180,7 +180,7 @@
     }
 
     .report-description {
-      color: #94A3B8;
+      color: #64748B;
       font-size: 0.9rem;
       margin-bottom: 1rem;
     }
@@ -189,7 +189,7 @@
       display: flex;
       gap: 1.5rem;
       padding-top: 1rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      border-top: 1px solid rgba(0, 0, 0, 0.08);
       font-size: 0.85rem;
       color: #64748B;
     }
@@ -202,9 +202,9 @@
 
     .schedule-badge {
       padding: 0.25rem 0.75rem;
-      background: rgba(16, 185, 129, 0.2);
+      background: rgba(79, 70, 229, 0.1);
       border-radius: 12px;
-      color: #10B981;
+      color: #4F46E5;
       font-size: 0.75rem;
       font-weight: 600;
     }
