--- a/settings.html
+++ b/settings.html
@@ -16,8 +16,8 @@
 
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #0F172A;
-      color: white;
+      background: #F8F9FC;
+      color: #1E293B;
     }
 
     .sidebar {
@@ -26,10 +26,11 @@
       top: 0;
       bottom: 0;
       width: 260px;
-      background: #1E293B;
-      border-right: 1px solid rgba(255, 255, 255, 0.1);
+      background: #FFFFFF;
+      border-right: 1px solid rgba(0, 0, 0, 0.08);
       padding: 1.5rem;
       z-index: 100;
+      box-shadow: 2px 0 8px rgba(0, 0, 0, 0.04);
     }
 
     .logo-section {
@@ -38,7 +39,7 @@
       gap: 0.75rem;
       margin-bottom: 2rem;
       padding-bottom: 1.5rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     }
 
     .logo-section img {
@@ -50,7 +51,7 @@
     .logo-text {
       font-size: 1.25rem;
       font-weight: 700;
-      background: linear-gradient(135deg, #60A5FA, #A78BFA);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -77,17 +78,17 @@
       display: flex;
       align-items: center;
       gap: 0.75rem;
-      color: #CBD5E1;
+      color: #64748B;
       text-decoration: none;
     }
 
     .nav-item:hover {
-      background: rgba(79, 70, 229, 0.2);
-      color: white;
+      background: rgba(79, 70, 229, 0.1);
+      color: #4F46E5;
     }
 
     .nav-item.active {
-      background: linear-gradient(135deg, #4F46E5, #7C3AED);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
       color: white;
     }
 
@@ -100,7 +101,7 @@
     .header {
       margin-bottom: 2rem;
       padding-bottom: 1.5rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     }
 
     .header h1 {
@@ -110,15 +111,16 @@
     }
 
     .header p {
-      color: #94A3B8;
+      color: #64748B;
     }
 
     .settings-section {
-      background: #1E293B;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: #FFFFFF;
+      border: 1px solid rgba(0, 0, 0, 0.08);
       border-radius: 16px;
       padding: 2rem;
       margin-bottom: 1.5rem;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
     }
 
     .settings-section h2 {
@@ -131,7 +133,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem 0;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
     }
 
     .setting-item:last-child {
@@ -144,7 +146,7 @@
     }
 
     .setting-info p {
-      color: #94A3B8;
+      color: #64748B;
       font-size: 0.9rem;
     }
 
@@ -152,14 +154,14 @@
       position: relative;
       width: 50px;
       height: 28px;
-      background: #334155;
+      background: #E2E8F0;
       border-radius: 14px;
       cursor: pointer;
       transition: background 0.3s;
     }
 
     .toggle.active {
-      background: linear-gradient(135deg, #4F46E5, #7C3AED);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
     }
 
     .toggle-slider {
@@ -180,17 +182,17 @@
     .input-field {
       width: 100%;
       padding: 0.75rem 1rem;
-      background: #0F172A;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      background: #FFFFFF;
+      border: 1px solid rgba(0, 0, 0, 0.1);
       border-radius: 8px;
-      color: white;
+      color: #1E293B;
       font-size: 1rem;
       margin-top: 0.5rem;
     }
 
     .save-btn {
       padding: 0.75rem 2rem;
-      background: linear-gradient(135deg, #4F46E5, #7C3AED);
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
       border: none;
       border-radius: 8px;
       color: white;
