--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
 
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #0F172A 0%, #1E293B 100%);
+      background: linear-gradient(135deg, #F8F9FC 0%, #1E293B 100%);
       height: 100vh;
       display: flex;
       align-items: center;
@@ -57,7 +57,7 @@
       font-size: 1.75rem;
       font-weight: 800;
       margin-bottom: 0.5rem;
-      color: #0F172A;
+      color: #F8F9FC;
     }
 
     .subtitle {
@@ -70,13 +70,13 @@
       background: #F1F5F9;
       border-radius: 10px;
       padding: 1rem;
-      border-left: 3px solid #10B981;
+      border-left: 3px solid #4F46E5;
     }
 
     .demo-credentials h3 {
       font-size: 0.85rem;
       margin-bottom: 0.75rem;
-      color: #10B981;
+      color: #4F46E5;
       font-weight: 700;
     }
 
@@ -102,7 +102,7 @@
       padding: 0.35rem 0.75rem;
       border-radius: 5px;
       font-weight: 600;
-      color: #0F172A;
+      color: #F8F9FC;
       font-family: 'Monaco', 'Courier New', monospace;
     }
 
@@ -120,7 +120,7 @@
       display: block;
       margin-bottom: 0.4rem;
       font-weight: 600;
-      color: #0F172A;
+      color: #F8F9FC;
       font-size: 0.85rem;
     }
 
@@ -135,14 +135,14 @@
 
     input:focus {
       outline: none;
-      border-color: #10B981;
+      border-color: #4F46E5;
     }
 
     .submit-btn {
       width: 100%;
       padding: 0.75rem;
-      background: linear-gradient(135deg, #10B981, #059669);
-      color: white;
+      background: linear-gradient(135deg, #4F46E5, #6366F1);
+      color: #1E293B;
       border: none;
       border-radius: 10px;
       font-size: 1rem;
@@ -162,8 +162,8 @@
       width: 100%;
       padding: 0.75rem;
       background: rgba(16, 185, 129, 0.1);
-      color: #10B981;
-      border: 2px solid #10B981;
+      color: #4F46E5;
+      border: 2px solid #4F46E5;
       border-radius: 10px;
       font-size: 1rem;
       font-weight: 600;
@@ -173,14 +173,14 @@
     }
 
     .demo-btn:hover {
-      background: #10B981;
-      color: white;
+      background: #4F46E5;
+      color: #1E293B;
     }
 
     .divider {
       text-align: center;
       margin: 0.75rem 0;
-      color: #94A3B8;
+      color: #64748B;
       position: relative;
       font-size: 0.85rem;
     }
@@ -232,7 +232,7 @@
     }
 
     .checkmark {
-      color: #10B981;
+      color: #4F46E5;
       font-weight: 800;
       font-size: 0.9rem;
     }
